Changes since 1.5:
